...
            maxLength={CODE_LENGTH}
            onChangeText={handleChangeCode}
            pointerEvents="none"
            ref={codeInputRef}
            selectionColor="transparent"
            style={styles.hiddenInput}
            testID="onboarding-code-input"
            textContentType="oneTimeCode"
            value={code}
          />
        </View>

        {errorMessage ? (
...
